# assignment-yarp-sinusoid

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
app/: assignment-sinusoids.xml  ymanager.ini
consumer_module/: CMakeLists.txt  consumer.cpp
producer_module/: CMakeLists.txt  producer.cpp
producer_module/config/: config.ini
